# fastapi-tortoise-aerich-setup

./: README.md  main.py  pyproject.toml  start.sh
core/: config.py  db.py
schema/: schema.py
